Fix size of popups on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -49,5 +49,5 @@ h2 {
 
 .popup {
   display: none;
-  width: 500px;
+  max-width: 500px;
 }
